Invalid dependency graph state when curves surface is invisible #99885

Closed
opened 2022-07-21 11:24:47 +02:00 by Sergey Sharybin · 4 comments

System Information
Operating system: Linux-5.18.0-2-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.08

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-19 23:50, hash: 2551cf9087
Worked: N/A

Short description of error

Scene configuration when curves are not parented to a surface and the surface is not visible leads to situation when the surface object is not part of the dependency graph but relations to it are still attempted to be built.

Exact steps for others to reproduce the error

  • Open attached file
  • Enable viewport visibility of the curves object
  • In release builds a missing nodes warning will be printed to the console. In the debug build an assert triggers

curves_surface.blend

**System Information** Operating system: Linux-5.18.0-2-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.08 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-19 23:50, hash: `2551cf9087` Worked: N/A **Short description of error** Scene configuration when curves are not parented to a surface and the surface is not visible leads to situation when the surface object is not part of the dependency graph but relations to it are still attempted to be built. **Exact steps for others to reproduce the error** - Open attached file - Enable viewport visibility of the curves object - In release builds a missing nodes warning will be printed to the console. In the debug build an assert triggers [curves_surface.blend](https://archive.blender.org/developer/F13305804/curves_surface.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2022-07-21 11:25:01 +02:00
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 10b048fd9e

This issue was referenced by 10b048fd9e51affa7d36022b32b24e489cfd0cbd
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99885
No description provided.