Fix T99885: Invalid dependency graph state when curves surface is invisible

Differential Revision: https://developer.blender.org/D15510